--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<h1>Deer Poop IBET</h1>
 <p>Srinidhi is cool.</p>
+<p>Brunjes LINK
+
+Census: Forysth 
+
+Carvalho 
+
+PLAN: 
+saturday: 5:30pm, 9:00pm. 
+
+Paragraph 1: 
+FRANK AND SRINIDHI Census
+Paragraph 2:
+ARPITA AND JIAXUAN Elevation/Land structure 
+  
+  
+</p>
